apps/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-postgres
  namespace: atuin
spec:
  selector:
    app: atuin-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
spec:
  selector:
    app: atuin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  type: ClusterIP
