apps/atuin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atuin
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`atuin.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: atuin
          port: 80
          namespace: atuin
